--- a/src/components/Header/ActionButtons/ActionButtons.module.scss
+++ b/src/components/Header/ActionButtons/ActionButtons.module.scss
@@ -1,25 +1,11 @@
 .actionButtons {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: row;
   user-select: none;
   margin-right: 10px;
-
-  span, div {
-    cursor: pointer;
-    border-radius: 4px;
-
-    &:hover {
-      background-color: #e8e7e3;
-      transition: background-color 0.2s ease-in-out;
-    }
-
-    &:active {
-      background-color: #d3d3d3;
-      transition: background-color 0.2s ease-in-out;
-    }
-  }
 
   span {
     margin-right: 10px;
@@ -31,7 +17,7 @@
     color: #37352f;
   }
 
-  div {
+  .actionButton {
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -43,6 +29,22 @@
       width: 20px;
       height: 20px;
       opacity: 0.7;
+    }
+  }
+
+
+  span, .actionButton {
+    cursor: pointer;
+    border-radius: 4px;
+
+    &:hover {
+      background-color: #e8e7e3;
+      transition: background-color 0.2s ease-in-out;
+    }
+
+    &:active {
+      background-color: #d3d3d3;
+      transition: background-color 0.2s ease-in-out;
     }
   }
 }
