--- a/src/components/Templates/Board/BoardContent/BoardContent.module.scss
+++ b/src/components/Templates/Board/BoardContent/BoardContent.module.scss
@@ -1,5 +1,6 @@
 .content {
   position: relative;
+  top: 40px;
   width: 90%;
   display: flex;
   align-items: flex-start;
@@ -8,14 +9,14 @@
 
   .pageIcon {
     position: absolute;
-    top: -90px;
+    top: -120px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 142px;
     height: 142px;
-    border-radius: 5px;
+    border-radius: 4px;
     user-select: none;
 
     &:hover {
@@ -27,12 +28,20 @@
       width: 125px;
       height: 125px;
       z-index: 10;
-      border-radius: 5px;
+      border-radius: 4px;
     }
   }
 
-  .commentBlock {
-    margin-top: 37px;
+  .optionsBlock {
+    display: flex;
+    flex-direction: row;
+    opacity: 0;
+    user-select: none;
+
+    &:hover {
+      opacity: 1;
+      transition: opacity 50ms ease-in-out;
+    }
 
     div {
       cursor: pointer;
@@ -40,14 +49,13 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      padding: 5px;
-      border-radius: 4px;
-      opacity: 0;
+      margin: 0 2px;
+      padding: 4px;
+      border-radius: 3px;
 
       &:hover {
         background-color: #e8e7e3;
         transition: background-color 0.15s ease-in-out;
-        opacity: 1;
       }
 
       &:active {
@@ -58,7 +66,7 @@
       img {
         width: 16px;
         height: 16px;
-        opacity: 0.6;
+        opacity: 0.5;
         object-fit: cover;
       }
 
@@ -66,7 +74,7 @@
         font-size: 14px;
         font-weight: 400;
         margin: 0 5px;
-        color: #73716c;
+        color: #84827f;
       }
     }
   }
