--- a/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
+++ b/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
@@ -33,12 +33,13 @@
       }
     }
 
-    div {
+    > div {
       display: flex;
       align-items: center;
       margin-left: 2px;
 
       .icon {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -56,7 +57,7 @@
         }
       }
 
-      span {
+      .pageTitle {
         padding-left: 5px;
         font-size: 14px;
         font-weight: 600;
