--- a/src/shared/Buttons/AddNewPage/AddNewPageButton.module.scss
+++ b/src/shared/Buttons/AddNewPage/AddNewPageButton.module.scss
@@ -1,7 +1,7 @@
 .addPageBtn {
   cursor: pointer;
   position: absolute;
-  right: 5px;
+  right: 13px;
   top: -3px;
   display: flex;
   align-items: center;
@@ -15,11 +15,11 @@
     height: 20px;
     padding: 2px;
     border-radius: 2px;
-    opacity: 0.7;
+    opacity: 0.5;
 
     &:hover {
       background-color: #e8e7e3;
-      transition: background-color 0.2s ease-in-out;
+      transition: background-color 0.2s ease-out;
     }
   }
 }
