--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,7 @@
 .header {
   position: relative;
-  max-width: 100%;
-  //width: 100%;
   min-width: calc(100vw - 300px); // !!!!
+  max-width: 100vw;
   height: 45px;
   display: flex;
   flex-direction: row;
