--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -4,13 +4,23 @@
   position: relative;
   width: 300px;
   max-width: 500px;
-  min-width: 195px;
+  //min-width: 195px;
   min-height: 100vh; // calc(100vh - 70px);
-  background-color:#f7f6f3;
+  background:rgb(247, 246, 243);
   user-select: none;
+  white-space: nowrap;
 
   .panel {
     position: relative;
     margin-bottom: 10px;
   }
+
+  transition: width 0.3s ease-in-out;
 }
+
+.close {
+  width: 0;
+  opacity: 0;
+  transition: width, opacity, 0.3s ease-in-out;
+}
+
