--- a/src/components/Templates/Board/Board.module.scss
+++ b/src/components/Templates/Board/Board.module.scss
@@ -5,4 +5,26 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
+
+  .contentBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content:  flex-start;
+  }
 }
+
+.shortWidth {
+  width: 60%;
+  transition: width 0.5s ease-out;
+}
+
+.fullWidth {
+  width: 85%;
+  transition: width 0.5s ease-out;
+}
+
+.smallText {}
+
+.defaultText {}
+
+
