--- a/src/components/Templates/Board/BoardContent/BoardContent.module.scss
+++ b/src/components/Templates/Board/BoardContent/BoardContent.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: flex-start;
   flex-direction: row;
-  //min-height: calc(100vh - 250px - 120px - 45px); //!
-  height: 500px;
-  min-width: 70%;
-  max-width: 100%;
+  min-height: 200px;
+  width: 100%;
+  margin-top: 25px;
+  //background-color: #7bceff;
 }
