--- a/src/components/Templates/Board/BoardOptions/BoardOptions.module.scss
+++ b/src/components/Templates/Board/BoardOptions/BoardOptions.module.scss
@@ -1,11 +1,11 @@
 .options {
   position: relative;
   top: 40px;
-  width: 90%; //!
+  width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 0;
 
   .pageIcon {
     position: absolute;
@@ -33,8 +33,7 @@
   }
 
   .optionsBlock {
-    display: flex;
-    flex-direction: row;
+    display: inline-flex;
     opacity: 0;
     user-select: none;
 
@@ -74,7 +73,7 @@
         font-size: 14px;
         font-weight: 400;
         margin: 0 5px;
-        color: #84827f;
+        color: rgba(55, 53, 47, 0.5);
       }
     }
   }
