--- a/src/components/ToggleOptionsList/ToggleOptionItem/ToggleOptionItem.module.scss
+++ b/src/components/ToggleOptionsList/ToggleOptionItem/ToggleOptionItem.module.scss
@@ -1,9 +1,10 @@
 .item {
   cursor: pointer;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   width: calc(100% - 8px);
-  padding: 4px 10px;
+  padding: 0 10px;
   border-radius: 3px;
   margin: 0 4px;
 
