--- a/src/shared/ModalWindows/PageSettings/PageSettings.module.scss
+++ b/src/shared/ModalWindows/PageSettings/PageSettings.module.scss
@@ -1,7 +1,7 @@
 .pageSettings {
-  //position: absolute;
-  //top: 35px;
-  //right: 15px;
+  position: absolute;
+  top: 33px;
+  right: 0;
   width: 230px;
   max-height: 750px;
   padding: 4px 0;
