--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,7 @@
   outline: none;
   font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
   box-sizing: border-box;
+
 }
 
 html {
@@ -42,6 +43,28 @@ h2 {
 
 a {
   text-decoration: none;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #edece9;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #d3d1cb;
+
+  &:hover {
+    background-color: #b7b6b5;
+    transition: background-color 0.1s ease-out;
+  }
+}
+
+::selection {
+  background: #bfe5f4;
 }
 
 //@mixin noselect {
