--- a/src/components/PageCover/Navbar/Navbar.module.scss
+++ b/src/components/PageCover/Navbar/Navbar.module.scss
@@ -9,7 +9,10 @@
     align-items: center;
     justify-content: flex-end;
     flex-grow: 1;
-    color: rgba(55, 53, 47, 0.65);
+
+    span {
+      color: rgba(55, 53, 47, 0.65);
+    }
 
     div {
       cursor: pointer;
