Change page cover modal refactoring

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,8 +5,8 @@
   height: 45px;
   display: flex;
   flex-direction: row;
-  z-index: 100;
   user-select: none;
+  //z-index: 20;
 
   .navbar {
     display: flex;
