--- a/src/shared/ModalWindows/SwitchCover/SwitchCover.module.scss
+++ b/src/shared/ModalWindows/SwitchCover/SwitchCover.module.scss
@@ -1,8 +1,8 @@
 .modal {
-  position: relative;
-  top: 20px;
-  height: 100vh;
-  z-index: 100;
+  position: absolute;
+  right: -60px;
+  top: -5px;
+  z-index: 10;
 
   .switchCover {
     display: flex;
