--- a/src/shared/ModalWindows/QuickSearch/QuickFindModal.module.scss
+++ b/src/shared/ModalWindows/QuickSearch/QuickFindModal.module.scss
@@ -8,6 +8,7 @@
   align-items: flex-start;
   justify-content: center;
   pointer-events: auto;
+  z-index: 10;
 
   .modal2 {
     position: absolute;
