--- a/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
+++ b/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
@@ -7,18 +7,18 @@
     border-radius: 3px;
 
     &.active {
-      background-color: red;
+      background: red;
       color: red;
 
       &:hover {
-        background-color: #ababa5;
-        transition: background-color 0.2s ease-in-out;
+        background: #ababa5;
+        transition: background-color 0.1s ease-in-out;
       }
     }
 
     &:hover {
-      background-color: #e8e7e3;
-      transition: background-color 0.2s ease-in-out;
+      background: #e8e7e3;
+      transition: background-color 0.1s ease-in-out;
     }
 
     .toggleIcon {
@@ -28,8 +28,8 @@
       border-radius: 3px;
 
       &:hover {
-        background-color: #d3d3d3;
-        transition: background-color 0.2s ease-in-out;
+        background: #d3d3d3;
+        transition: background-color 0.1s ease-in-out;
       }
     }
 
@@ -48,7 +48,8 @@
         border-radius: 3px;
 
         &:hover {
-          background-color: #d3d3d3;
+          background: #d3d3d3;
+          transition: background-color 0.1s ease-in-out;
         }
 
         img {
@@ -66,8 +67,3 @@
       }
     }
   }
-
-  //.toggleIcon {
-  //  transform: rotate(180deg);
-  //  transition: transform 0.2s ease-in-out;
-  //}
