--- a/src/components/Sidebar/SwitcherBar/Switcher.module.scss
+++ b/src/components/Sidebar/SwitcherBar/Switcher.module.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   width: 100%;
   height: 45px;
-  padding: 2px 16px;
+  padding: 2px 40px 2px 16px;
 
   &:hover {
     background-color: #e6e4e1;
@@ -23,6 +23,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 21px;
+    white-space: nowrap;
     color: #37352f;
   }
 }
