--- a/src/components/Workspace/PageOptionsPanel/PageCover/PageCover.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageCover/PageCover.module.scss
@@ -47,9 +47,12 @@
         padding: 2px 6px 4px 6px;
         font-weight: 500;
         user-select: none;
-        color: rgba(55, 53, 47, 0.65);
-        fill: rgba(55, 53, 47, 0.65);
+        fill: rgba(55, 53, 47, 0.65); //!
         background: white ;
+
+        span {
+          color: rgba(55, 53, 47, 0.65);
+        }
 
         &:hover {
           background: rgb(239, 239, 238);
