--- a/src/shared/Buttons/ListItemOptions/ListItemOptions.module.scss
+++ b/src/shared/Buttons/ListItemOptions/ListItemOptions.module.scss
@@ -4,17 +4,16 @@
   width: 20px;
   height: 20px;
   border-radius: 3px;
-  opacity: 0;
 
   img {
     width: 20px;
     height: 20px;
     padding: 1px;
+    z-index: 1;
   }
 
   &:hover {
     background-color: #d3d3d3;
-    opacity: 1;
     transition: background-color 0.2s ease-in-out;
   }
 }
