--- a/src/shared/ModalWindows/SwitchCover/SwitchCover.module.scss
+++ b/src/shared/ModalWindows/SwitchCover/SwitchCover.module.scss
@@ -1,26 +1,37 @@
 .modal {
-  position: absolute;
-  right: -60px;
-  top: -5px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 10;
 
-  .switchCover {
-    display: flex;
-    flex-direction: column;
-    min-width: 180px;
-    width: 540px;
-    max-height: 420px;
-    border-radius: 4px;
-    box-shadow: rgb(15 15 15 / 5%) 0 0 0 1px, rgb(15 15 15 / 10%) 0 3px 6px, rgb(15 15 15 / 20%) 0 9px 24px;
+  .root {
+    position: absolute;
+    right: 200px;
+    top: 310px;
 
-    .contentBlock {
-      flex-grow: 1;
-      overflow-x: hidden;
-      overflow-y: auto;
+    .switchCover {
+      display: flex;
+      flex-direction: column;
+      min-width: 180px;
+      width: 540px;
+      max-height: 420px;
+      border-radius: 4px;
+      box-shadow: rgb(15 15 15 / 5%) 0 0 0 1px, rgb(15 15 15 / 10%) 0 3px 6px, rgb(15 15 15 / 20%) 0 9px 24px;
+      background: white;
 
-      .content {
-        padding-bottom: 8px;
+      .contentBlock {
+        flex-grow: 1;
+        overflow-x: hidden;
+        overflow-y: auto;
+
+        .content {
+          padding-bottom: 8px;
+        }
       }
     }
   }
 }
+
+
