--- a/src/components/Workspace/PageOptionsPanel/PageIcon/ChangePageIcon.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageIcon/ChangePageIcon.module.scss
@@ -1,13 +1,14 @@
 .root {
   position: absolute;
   top: 30px;
-  left: 0;
+  left: -80px;
   min-width: 180px;
   width: 420px;
   height: 360px;
   max-height: 70vh;
-  border-radius: 3px;
+  border-radius: 4px;
   box-shadow: rgb(15 15 15 / 5%) 0 0 0 1px, rgb(15 15 15 / 10%) 0 3px 6px, rgb(15 15 15 / 20%) 0 9px 24px;
   overflow: hidden;
   background: rgb(255,255,255);
+  z-index: 10;
 }
