--- a/src/shared/ModalWindows/SidebarListOptions/SidebarListOptions.module.scss
+++ b/src/shared/ModalWindows/SidebarListOptions/SidebarListOptions.module.scss
@@ -1,4 +1,7 @@
 .list {
+  position: relative;
+  left: 10%;
+  top: 40%;
   width: 245px;
   max-height: 350px;
   margin-right: 20px;
@@ -6,7 +9,8 @@
   padding: 4px 0;
   box-shadow: rgb(15 15 15 / 5%) 0 0 0 1px, rgb(15 15 15 / 10%) 0 3px 6px, rgb(15 15 15 / 20%) 0 9px 24px;;
   user-select:none;
-  z-index: 10;
+  background: white;
+  //z-index: 10;
 
   span {
     color: #37352f;
