Empty page modal start. Empty page options. Add new page functionality.

--- a/src/components/Workspace/PageOptionsPanel/PageIcon/ChangePageIcon.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageIcon/ChangePageIcon.module.scss
@@ -11,4 +11,10 @@
   overflow: hidden;
   background: rgb(255,255,255);
   z-index: 10;
+
+  .contentBlock {
+    padding: 5px 10px;
+
+    .content {}
+  }
 }
