--- a/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
@@ -6,6 +6,7 @@
   align-items: flex-start;
   flex-direction: column;
   padding: 20px 0;
+  margin-bottom: 25px;
 
   .pageIcon {
     position: absolute;
