--- a/src/components/Sidebar/NewPageBar/NewPageBar.module.scss
+++ b/src/components/Sidebar/NewPageBar/NewPageBar.module.scss
@@ -23,7 +23,7 @@
     color: rgba(55, 53, 47, 0.65);
   }
 
-  button {
+  .newPageBtn {
     cursor: pointer;
     display: flex;
     border: none;
