--- a/src/components/OptionsList/OptionItem/OptionItem.module.scss
+++ b/src/components/OptionsList/OptionItem/OptionItem.module.scss
@@ -52,4 +52,9 @@
     margin-left: 10px;
   }
 }
+
+.active {
+  background-color: #efefee;
+  transition: background-color 0.1s ease-in-out;
+}
 //#73716c
