--- a/src/components/PageTemplates/EmptyPage/EmptyPage.module.scss
+++ b/src/components/PageTemplates/EmptyPage/EmptyPage.module.scss
@@ -4,6 +4,16 @@
   margin-top: 30px;
   padding: 1px 3px;
 
+  .description {
+    margin-bottom: 15px;
+    padding: 0 5px;
+
+    p {
+      font-size: 16px;
+      color: rgba(55, 53, 47, 0.5);
+    }
+  }
+
   .templatesTitle {
     margin-top: 15px;
     margin-bottom: 10px;
