--- a/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
+++ b/src/components/Sidebar/PagesList/ListItem/SidebarListItem.module.scss
@@ -1,69 +1,69 @@
 .item {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    height: 27px;
-    margin: 2px 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 27px;
+  margin: 2px 0;
+  border-radius: 3px;
+
+  &:hover {
+    background: rgba(55, 53, 47, 0.08);
+    transition: background 0.1s ease-in-out;
+  }
+
+  &:active {
+    background: rgba(55, 53, 47, 0.16);
+    transition: background 0.1s ease-in-out;
+  }
+
+  .toggleIcon {
+    width: 20px;
+    height: 20px;
+    margin-left: 14px;
     border-radius: 3px;
 
-    &.active {
-      background: red;
-      color: red;
-
-      &:hover {
-        background: #ababa5;
-        transition: background-color 0.1s ease-in-out;
-      }
-    }
-
     &:hover {
-      background: #e8e7e3;
-      transition: background-color 0.1s ease-in-out;
+      background: #d3d3d3;
+      transition: background 0.1s ease-in-out;
     }
+  }
 
-    .toggleIcon {
+  > div {
+    display: flex;
+    align-items: center;
+    margin-left: 2px;
+
+    .icon {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       width: 20px;
       height: 20px;
-      margin-left: 14px;
       border-radius: 3px;
 
       &:hover {
         background: #d3d3d3;
-        transition: background-color 0.1s ease-in-out;
+        transition: background 0.1s ease-in-out;
+      }
+
+      img {
+        width: 16px;
+        height: 16px;
       }
     }
 
-    > div {
-      display: flex;
-      align-items: center;
-      margin-left: 2px;
-
-      .icon {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 20px;
-        height: 20px;
-        border-radius: 3px;
-
-        &:hover {
-          background: #d3d3d3;
-          transition: background-color 0.1s ease-in-out;
-        }
-
-        img {
-          width: 16px;
-          height: 16px;
-        }
-      }
-
-      .pageTitle {
-        padding-left: 5px;
-        font-size: 14px;
-        font-weight: 600;
-        line-height: 21px;
-        color: rgba(55, 53, 47, 0.65);
-      }
+    .pageTitle {
+      padding-left: 5px;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 21px;
+      color: rgba(55, 53, 47, 0.65);
     }
   }
+}
+
+.active {
+  background: rgba(55, 53, 47, 0.08);
+  transition: background 0.1s ease-in-out;
+}
