--- a/src/components/Workspace/PageOptionsPanel/PageCover/PageCover.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageCover/PageCover.module.scss
@@ -2,7 +2,8 @@
   position: relative;
   top: 0;
   display: flex;
-  flex-direction: column;align-items: center;
+  flex-direction: column;
+  align-items: center;
   max-width: 100%;
   min-width: 100%;
   min-height: 250px;
