--- a/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
@@ -81,8 +81,10 @@
   .pageTitle {
     margin-top:5px;
     margin-left: 7px;
+    max-width: 600px;
 
     h1 {
+      width: inherit;
       font-size: 40px;
       font-weight: bold;
       line-height: 48px;
