--- a/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
+++ b/src/components/Workspace/PageOptionsPanel/PageOptionsPanel.module.scss
@@ -10,7 +10,7 @@
 
   .pageIcon {
     position: absolute;
-    top: -120px;
+    top: -123px;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -21,21 +21,28 @@
     user-select: none;
 
     &:hover {
-      background-color: rgba(28, 28, 28, 0.1);
-      transition: background-color 0.1s ease-out;
+      background: rgba(55, 53, 47, 0.08);
+      transition: background 0.1s ease-out;
+    }
+    &:active {
+      background: rgba(55, 53, 47, 0.16);
+      transition: background 0.1s ease-out;
     }
 
     img {
       width: 125px;
       height: 125px;
       border-radius: 4px;
+      object-fit: cover;
     }
   }
 
   .optionsBlock {
+    position: relative;
+    left: 7px;
     display: inline-flex;
-    opacity: 0;
     user-select: none;
+    opacity: 0;
 
     &:hover {
       opacity: 1;
