--- a/src/shared/ModalWindows/ChangePageTitle/ChangePageTitle.module.scss
+++ b/src/shared/ModalWindows/ChangePageTitle/ChangePageTitle.module.scss
@@ -11,7 +11,7 @@
   border: 1px solid #dfdedd;
   border-radius: 4px;
   box-shadow: rgb(15 15 15 / 5%) 0 0 0 1px, rgb(15 15 15 / 10%) 0 3px 6px, rgb(15 15 15 / 20%) 0 9px 24px;
-  background-color: #fefefe;
+  background-color: white;
   z-index: 10;
 
   div {
